--- a/Dissertacao.tex
+++ b/Dissertacao.tex
@@ -238,7 +238,7 @@
     \else
         \course{Mestrado em Modelagem em Ciências da Terra e do Ambiente}
         \typework{Dissertação de Mestrado}
-        \thesisdegreetitle{Mestre em Mestre em Ciências Ambientais}
+        \thesisdegreetitle{Mestre em Ciências Ambientais}
     \fi
     
     \thesistitle{\ppgmtitulo}
@@ -275,6 +275,9 @@
         
         % Sumários
         \thesiscontents
+        
+        % Lista de quadros (remova se seu texto não possuir quadros)
+        \listofquadro
         
         % Lista de algoritmos (remova se seu texto não possuir algoritmos)
         \listofalgorithms
